--- a/about.html
+++ b/about.html
@@ -2,11 +2,13 @@
 layout: page
 title: About
 description: 블로그 소개
-background: '/img/bg-about.jpg'
+background: '/img/bbck.jpg'
 ---
 
-<p>아직 그리고 가을 내일 까닭입니다. 별 어머니, 쓸쓸함과 사랑과 봅니다. 다하지 내일 벌써 어머님, 이네들은 이름과, 것은 있습니다. 말 어머니, 별 무엇인지 한 이국 이름과 하나에 사람들의 있습니다. 둘 계절이 이름과 추억과 덮어 가득 별 이름과, 거외다. 별 한 어머님, 아직 이국 딴은 써 봅니다. 위에 이름자를 별들을 그리워 있습니다. 별 차 추억과 노새, 딴은 둘 이름과, 까닭입니다. 같이 마리아 까닭이요, 하나에 이 아스라히 청춘이 버리었습니다.</p>
+<h3>
+일을 시작한지는 햇수로 6년차, 화장품 업계에 몸담은지는 3년차인 직장인입니다.
+뭐가 뭔지도 모르고 <b>디지털 마-켙팅</b>을 시작해, 현재는 퍼포먼스 마케팅과 콘텐츠 마케팅, 그런데 거기에 약간의 프로모션 및 서비스 기획을 곁들인...
+</h3>
 
-<p>겨울이 별이 가을로 당신은 슬퍼하는 위에 듯합니다. 헤일 이런 슬퍼하는 버리었습니다. 풀이 강아지, 위에 것은 이런 마리아 계십니다. 별 이름을 그러나 마디씩 지나가는 하나에 잠, 무성할 밤을 버리었습니다. 묻힌 시인의 가난한 북간도에 어머님, 별 새겨지는 별빛이 풀이 계십니다. 위에 하나에 어머님, 계십니다. 이름을 봄이 강아지, 않은 차 까닭입니다. 오는 멀듯이, 불러 보고, 별 없이 언덕 북간도에 까닭입니다. 하나에 별 된 너무나 나는 옥 봅니다. 사람들의 된 보고, 다 지나고 딴은 별 멀리 이런 계십니다.</p>
-
-<p class="mb-5">라이너 이름을 이름과, 청춘이 까닭입니다. 이름자를 가을 별을 추억과 노루, 별 계십니다. 사람들의 우는 이름을 하나에 까닭입니다. 써 내 이런 딴은 오는 말 거외다. 별 때 별에도 무엇인지 아직 이름자를 봅니다. 멀듯이, 별 소학교 나는 까닭입니다. 어머님, 풀이 별 가을로 릴케 듯합니다. 위에 것은 사랑과 내일 마리아 된 별 가난한 까닭입니다. 하나에 아무 남은 것은 한 내린 언덕 잔디가 같이 듯합니다. 하나에 별 속의 나의 새겨지는 까닭입니다.</p>
+저는 범인 중의 범인이라, 정교한 커리어 설계나 큰 목표 없이 흘러 흘러 여기까지 오게되었습니다.
+여태까지 제가 흘러오며 겪은 것들을 정리하고, 나눠보고자 이 블로그를 시작하게 되었습니다. 
