--- a/about.html
+++ b/about.html
@@ -6,9 +6,6 @@ background: '/img/bbck.jpg'
 ---
 
 <h3>
-일을 시작한지는 햇수로 6년차, 화장품 업계에 몸담은지는 3년차인 직장인입니다.
-뭐가 뭔지도 모르고 <b>디지털 마-켙팅</b>을 시작해, 현재는 퍼포먼스 마케팅과 콘텐츠 마케팅, 그런데 거기에 약간의 프로모션 및 서비스 기획을 곁들인...
-</h3>
-
-저는 범인 중의 범인이라, 정교한 커리어 설계나 큰 목표 없이 흘러 흘러 여기까지 오게되었습니다.
-여태까지 제가 흘러오며 겪은 것들을 정리하고, 나눠보고자 이 블로그를 시작하게 되었습니다. 
+일을 시작한지는 햇수로 6년차, 화장품 업계에 몸담은지는 3년차인 직장인입니다.<p></h3>
+뭐가 뭔지도 모르고 <b>디지털 마-켙팅</b>을 시작해, <p>
+현재는 퍼포먼스 마케팅과 콘텐츠 마케팅, 그런데 거기에 약간의 프로모션 및 서비스 기획을 곁들인...
