--- a/about.html
+++ b/about.html
@@ -7,5 +7,5 @@ background: 'img/posts/bck.jpg'
 
 <h3>
 일을 시작한지는 햇수로 6년차, 화장품 업계에 몸담은지는 3년차인 직장인입니다.<p></h3>
-뭐가 뭔지도 모르고 <b>디지털 마-켙팅</b>을 시작해
+뭐가 뭔지도 모르고 <b>디지털 마-켙팅</b>을 시작해 여기까지 흘러왔습니다.
 현재는 퍼포먼스 마케팅과 콘텐츠 마케팅, 그런데 거기에 약간의 프로모션 및 서비스 기획을 곁들인...
