--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@ form: true
 ---
 
 <p>문의 사항이 있으신가요? 아래 양식을 작성해주세요.</p>
-<form name="sentMessage" id="contactForm" novalidate>
+<form name="sentMessage" id="contactForm" data-email="shunaem2@gmail.com"
+novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>이름</label>
