--- a/about.html
+++ b/about.html
@@ -8,4 +8,20 @@ background: 'img/posts/bck.jpg'
 <h3>
 일을 시작한지는 햇수로 6년차, 화장품 업계에 몸담은지는 3년차인 직장인입니다.<p></h3>
 뭐가 뭔지도 모르고 <b>디지털 마-켙팅</b>을 시작해 여기까지 흘러왔습니다.
-현재는 퍼포먼스 마케팅과 콘텐츠 마케팅, 그런데 거기에 약간의 프로모션 및 서비스 기획을 곁들인...
+현재는 퍼포먼스 마케팅과 콘텐츠 마케팅, 그런데 거기에 약간의 프로모션 및 서비스 기획을 곁들인...<br>
+업종은 가리지 않으나 가장 관심있는 분야는 <b>소비재(FMCG), 화장품, 건강식품 등</b>입니다.<br>
+또한 <b>브랜딩 & 카피라이팅</b>에도 관심이 있습니다🥰
+<p><p>
+
+<b>📍퍼포먼스 마케팅</b>
+  : 페이스북, 인스타그램, 네이버(DA), 카카오모먼트(DA)
+  <p>
+
+<b>📍소셜미디어(SNS) 및 콘텐츠 마케팅</b>
+  : 페이스북, 인스타그램, 네이버 블로그, 링크드인, 트위터, 웹사이트 기획 및 운영
+  <p>
+
+<b>📍디지털 캠페인 & IMC 캠페인 <p></b>
+<b>📍프로모션 기획, 운영 및 분석 <p></b>
+<b>📍인플루언서 마케팅</b>
+ : 인스타그램, 네이버 블로그, 유튜브, 소셜마켓<p>
